# 07-GADTs

./: CHANGELOG.md  GADTs.hs  RedBlackGADT.hs  RedBlackGADT0.hs  RedBlackGADT1.hs  RedBlackGADT2.hs  RedBlackGADT3.hs  cis5520-GADTs.cabal  stack.yaml
